--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "sqlite3": "~3.1.1"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^1.0.2",
     "supertest": "^1.2.0"
   }
 }
